<resources>
    <string name="app_name">Willoughby House Of Prayer</string>
    <string name="our_mission">Our Mission For Willoughby House Of Prayer </string>
    <string name="our_mission_statement">Our mission is to help people discover how much God loves them.\n We are called to share with others
    how God wants everyone to know Him and have a personal relationship with His Son Jesus Christ\n Our vision is that The House Of Prayer
    located in downtown Willoughby is where people can come for non-judgemental and compassionate prayer support as they deal with the troubles and
    concern in their lives.\n The Willoughby House Of Prayer is A Christ-centered Healing Ministry. We are here to pray for you or with you if
    so desired</string>
    <string name="prayer_board_str">Check Out Our Prayer Board!</string>
    <string name="ihop_str">Willoughby House Of Prayer\n 4091 Erie St. Willoughby Oh 44094/Activities and Events</string>
    <string name="events_str">Activities For further information call Darlene 440-942-5966</string>
    <string name="events_str2">Thursdays:\n11:00-12:00PM Bible Study\nTHURSDAY EVENINGS:\n5PM-8PM ADDICTION SUPPORT FOR SUFFERING AND FAMILIES\nSupport by listening and
    praying for healing for the addicted.\n\nAlso FROM 5PM-8PM\nPRAY FOR THOSE IN PRISON\nSupport by listening and praying for loved ones in prison.\nInfo:Charlie 440-990-8517\n\n
    As you keep the Willoughby Area House of Prayer in your prayers,Please consider joining this ministry.\nThank You And God Bless You!!</string>
    <string name="ihop_main_str"> 4091 Erie St.</string>
    <string name="house_of_prayer_media">Willoughby House Of Prayer Media</string>
    <string name="previous">Previous</string>
    <string name="next_pic">Next Pic</string>
    <string name="willoughby_house_of_prayer">Willoughby House Of Prayer\n4091 Erie St. 44094</string>
    <string name="str_for_outside_dryerase"> Dry erase board for prayer requests on outside window Available 24/7\nWe will transfer the prayers inside on a prayer wall\n
    And pray for them for four weeks</string>
    <string name="inside_prayer_board">Inside Prayer Board\nHours Of Operation</string>
    <string name="inside_prayer_hours_of_operation">Mon-Wed-Friday 3-5PM\nThursdays 5-8PM\nSaturdays 9-3PM</string>
    <string name="contact_us">Contact Us We\'d Love To Hear From You!</string>
    <string name="thank_you_so_much">If You Would Like To Phone In Your Prayers</string>
    <string name="call_str"> If You Would Like To Phone In Your Prayers Call Lela At 4402899645 God Bless You!!!</string>
</resources>
